# fluke_dewk_1620A_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  ProxyManager.ps1  README.md  docker-compose.yml  functional_relationships.md  manage.py  pyproject.toml  requirements.txt  steps.md
fluke_data/: __init__.py  admin.py  apps.py  connection_manager.py  consumers.py  dev_consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py  visa_communication.py
fluke_data/api/: urls.py  views.py
fluke_data/crews/: crew.py  plot.html
fluke_data/migrations/: 0001_initial.py  0002_measuresmodel_and_more.py  0002_thermohygrometermodel_last_connection_attempt.py  0003_calibrationcertificatemodel.py  0003_remove_measuresmodel_pn_sn_measuresmodel_instrument_and_more.py  0004_thermohygrometermodel_is_connected.py  0004_thermohygrometermodel_time_interval_to_save_measures.py  0005_measuresmodel_sensor_pn_measuresmodel_sensor_sn_and_more.py  0005_remove_calibrationcertificatemodel_instrument_and_more.py  0006_alter_thermohygrometermodel_time_interval_to_save_measures.py  0006_thermohygrometermodel_group_name.py  0007_measuresmodel_corrected_humidity_and_more.py
fluke_dewk_1620A_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
fluxogramas/: fluxo_add_instrumentos.md  fluxo_analise_historico_ia.md  fluxo_conexao_tempo_real.md  fluxo_crud_termohigrometros.md  fluxo_gerenciamento_entidades.md  fluxo_uso_usuario.md
staticfiles/css/: styles.css
thermohygrometer/: thermohygrometer.py
thermohygrometer_app/: apps.py  thermohygrometer.py  urls.py  views.py
(+42 files in other folders)
